# blendmcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  addon.py  bash.exe.stackdump  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
docs/: claude-integration-improvements.md
src/blender_mcp/: __init__.py  addon.py  install_addon.py  server.py
src/blendmcp/: __init__.py  addon.py  install_addon.py  server.py
src/mcpblender/: __init__.py  addon.py  install_addon.py  server.py
tests/: conftest.py  test_install_addon.py  test_server_helpers.py  test_sketchfab_normalization.py  test_tools.py
